# advent_of_code

./: .gitignore  README.md  aoc_try.py  boilerplate.py  pyproject.toml
2022/: 01.py  02.py  03.py  04.py  05.py  06.py  08.py  09.py  10.py  11.py  12.py
2023/: 02.py  03.py  04.py
solutions/: 05.py  2021_01.py  2022_07.py  2022_09.py  2022_10.py  2022_12.py  2023_01.py  2023_02.py  2023_04.py  2023_06.py  2023_07.py  2023_08.py  2024_01.py  2024_02.py  2024_05.py  2025_01.py  2025_02.py  2025_03.py  2025_04.py  2025_05.py  boilerplate.py
